--- a/src/app/doctor-list/doctor-list.component.html
+++ b/src/app/doctor-list/doctor-list.component.html
@@ -1,1 +1,52 @@
-<p>doctor-list works!</p>
+<div class="table-responsive">
+  <div class="content">
+    <div class="row pb-3">
+      <div class="col-md-6 container-bela-button">
+        <button class="bela-button" mat-button (click)="openAddHospital()">Nuevo Hospital</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <table mat-table [dataSource]="doctorDataSource" class="bela-table-view table">
+          <!--id-->
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef class="text-center">Id</th>
+            <td mat-cell *matCellDef="let element" class="text-center"> {{element.id}} </td>
+          </ng-container>
+
+          <!--name-->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef class="text-center">Nombre</th>
+            <td mat-cell *matCellDef="let element" class="text-center"> {{element.name}} </td>
+          </ng-container>
+
+          <!--lastName-->
+          <ng-container matColumnDef="lastName">
+            <th mat-header-cell *matHeaderCellDef class="text-center">Apellido</th>
+            <td mat-cell *matCellDef="let element" class="text-center"> {{element.lastName}} </td>
+          </ng-container>
+
+          <!--birthName-->
+          <ng-container matColumnDef="birthDate">
+            <th mat-header-cell *matHeaderCellDef class="text-center">Fecha de nacimiento</th>
+            <td mat-cell *matCellDef="let element" class="text-center"> {{element.birthDate}} </td>
+          </ng-container>
+
+          <!--address-->
+          <ng-container matColumnDef="address">
+            <th mat-header-cell *matHeaderCellDef class="text-center">Dirección</th>
+            <td mat-cell *matCellDef="let element" class="text-center"> {{element.address}} </td>
+          </ng-container>
+
+          <!--suppress AngularUndefinedBinding -->
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+
+          <!--suppress AngularUndefinedBinding -->
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5]" [pageSize]="5" showFirstLastButtons>
+        </mat-paginator>
+      </div>
+    </div>
+  </div>
+</div>
