--- a/src/app/hospital-list/hospital-list.component.html
+++ b/src/app/hospital-list/hospital-list.component.html
@@ -1,1 +1,40 @@
-<p>hospital-list works!</p>
+<div class="table-responsive">
+  <div class="content">
+    <div class="row pb-3">
+      <div class="col-md-6 container-bela-button">
+        <button class="bela-button" mat-button (click)="openAddHospital()">Nuevo Hospital</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <table mat-table [dataSource]="hospitalDataSource" class="bela-table-view table">
+          <!--Id-->
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef>Id</th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+          </ng-container>
+
+          <!--Name-->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Nombre</th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          </ng-container>
+
+          <!--Description-->
+          <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef>Descripción</th>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+          </ng-container>
+
+          <!--suppress AngularUndefinedBinding -->
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+
+          <!--suppress AngularUndefinedBinding -->
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5]" [pageSize]="5" showFirstLastButtons>
+        </mat-paginator>
+      </div>
+    </div>
+  </div>
+</div>
