--- a/src/app/doctor-list/modal-doctor/modal-doctor.component.html
+++ b/src/app/doctor-list/modal-doctor/modal-doctor.component.html
@@ -9,8 +9,8 @@
       <label>Hospital:</label>
     </div>
     <div class="col-md-4">
-      <mat-select [(ngModel)]="this.hospitalId">
-        <mat-option *ngFor="let option of options" [value]="option.value">
+      <mat-select [(ngModel)]="this.hospitalId" class="w-100">
+        <mat-option *ngFor="let option of hospitalOptions" [value]="option.value">
           {{option.text}}
         </mat-option>
       </mat-select>
@@ -19,7 +19,11 @@
       <label>Especialidad:</label>
     </div>
     <div class="col-md-4">
-      <input type="text" [(ngModel)]="this.specialityId" class="w-100" />
+      <mat-select [(ngModel)]="this.specialityId" class="w-100">
+        <mat-option *ngFor="let option of specialityOptions" [value]="option.value">
+          {{option.text}}
+        </mat-option>
+      </mat-select>
     </div>
   </div>
   <div class="row pb-2">
@@ -27,13 +31,13 @@
       <label>Nombre:</label>
     </div>
     <div class="col-md-4">
-      <input type="text" [(ngModel)]="name" class="w-100" />
+      <input type="text" [(ngModel)]="name" class="w-100" required />
     </div>
     <div class="col-md-2">
       <label>Apellido:</label>
     </div>
     <div class="col-md-4">
-      <input type="text" [(ngModel)]="lastName" class="w-100" />
+      <input type="text" [(ngModel)]="lastName" class="w-100" required />
     </div>
   </div>
   <div class="row pb-2">
@@ -54,12 +58,12 @@
       <label>Direccion:</label>
     </div>
     <div class="col-md-10">
-      <textarea cols="40" rows="3" type="text" [(ngModel)]="this.address" class="w-100"></textarea>
+      <textarea cols="40" rows="3" type="text" [(ngModel)]="this.address" class="w-100" required></textarea>
     </div>
   </div>
   <div class="row pt-2 pb-2" mat-dialog-actions>
     <div class="col-md-6">
-      <button mat-button class="bela-button" (click)="save()" cdkFocusInitial>
+      <button mat-button class="bela-button" type="submit" (click)="save()" cdkFocusInitial>
         Agregar
       </button>
     </div>
