--- a/src/app/doctor-list/doctor-list.component.scss
+++ b/src/app/doctor-list/doctor-list.component.scss
@@ -1,3 +1,8 @@
 ::ng-deep .mat-select-panel {
   background-color: white;
 }
+::ng-deep th.mat-header-cell,
+td.mat-cell,
+td.mat-footer-cell {
+  border-bottom-style: none;
+}
