--- a/src/app/doctor-list/modal-doctor/modal-doctor.component.html
+++ b/src/app/doctor-list/modal-doctor/modal-doctor.component.html
@@ -1,7 +1,7 @@
 <div class="container h-100" style="background-color: white;">
   <div class="row align-items-center">
-    <div class="col-md-12">
-      <h1 mat-dialog-title>Adicionar hospital</h1>
+    <div class="col-md-12  pt-2">
+      <h1 mat-dialog-title>Adicionar Doctor</h1>
     </div>
   </div>
   <div class="row pb-2">
