I added some fixes

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,38 +1,26 @@
-<mat-grid-list cols="3" rowHeight="3:1">
+<mat-grid-list cols="2" rowHeight="3:1">
   <mat-grid-tile>
-    <button routerLink="/private/client" mat-button class="bela-button button-dashboard-approved">
-      <i class="fas fa-users mat-i-tag button-icon"></i>
-      Clientes
+    <button routerLink="/private/hospital" mat-button class="bela-button button-dashboard-approved">
+      <i class="fa fa-hospital mat-i-tag button-icon"></i>
+      HOSPITALES
     </button>
   </mat-grid-tile>
   <mat-grid-tile>
-    <button routerLink="/private/professional" mat-button class="bela-button button-dashboard-approved">
-      <i class="fas fa-address-book mat-i-tag button-icon"></i>
-      Profesionales
+    <button routerLink="/private/patient" mat-button class="bela-button button-dashboard-approved">
+      <i class="fas fa-user-injured mat-i-tag button-icon"></i>
+      PACIENTES
     </button>
   </mat-grid-tile>
   <mat-grid-tile>
-    <button routerLink="/private/salon" mat-button class="bela-button button-dashboard-approved">
-      <i class="fas fa-store-alt mat-i-tag button-icon"></i>
-      Salones
+    <button routerLink="/private/doctor" mat-button class="bela-button button-dashboard-approved">
+      <i class="fas fa-user-md mat-i-tag button-icon"></i>
+      DOCTORES
     </button>
   </mat-grid-tile>
   <mat-grid-tile>
-    <button routerLink="/private/request/salon" mat-button class="bela-button button-dashboard-approved">
-      <i class="fas fa-store-alt mat-i-tag button-icon"></i>
-      Solicitud de Salones
-    </button>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <button routerLink="/private/request/professional" mat-button class="bela-button button-dashboard-approved">
-      <i class="fas fa-user-tie mat-i-tag button-icon"></i>
-      Solicitud de Profesional
-    </button>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <button routerLink="/private/report/general-report" mat-button class="bela-button button-dashboard-approved">
-      <i class="fa fa-list-ul mat-i-tag button-icon"></i>
-      Reportes
+    <button routerLink="/private/speciality" mat-button class="bela-button button-dashboard-approved">
+      <i class="fas fa-stethoscope mat-i-tag button-icon"></i>
+      Especialidades
     </button>
   </mat-grid-tile>
 </mat-grid-list>
