--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -26,7 +26,7 @@
         Pacientes
       </mat-list-item>
       <mat-list-item [routerLinkActive]="['bela-is-active']" routerLink="/private/speciality" (click)="sidenav.toggle()">
-        <i class="fas fa-store-alt mat-i-tag"></i>
+        <i class="fas fa-stethoscope mat-i-tag"></i>
         Especialidades
       </mat-list-item>
       <mat-list-item (click)="sidenav.toggle()">
